--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Hello Coursear!</title>
+</head>
+<body>
+<h1>Hello Coursera! I hope everything's alright.</h1>
+</body>
+</html>
