--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello Coursear!</title>
+<meta charset="utf-8">
+<title>Pat's Website</title>
+<style>
+
+#box{
+    background-color: grey;
+}
+#content{
+    background-color: blue;
+}
+</style>
 </head>
 <body>
-<h1>Hello Coursera! I hope everything's alright.</h1>
+
+<h1>Hello Coursera! This is my second homework.</h1>
+
+<div id="box">
+    <div id="content" >This is section 1. May I type in the lyrics that I like?</div>
+</div>
+
+<!--Desktop -->
+@media (min-width:922px){
+
+}
+<!--Tablet-->
+@media ( min-width: 768px) and (max-width: 991px){
+
+}
+<!--Mobile-->
+@media ( max-width: 767px){
+    
+}
+
+
+<h2>Section 2</h2>
+<h2>Section 3</h2>
+
 </body>
 </html>
