--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -1,9 +1,67 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Menu</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <header>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <div class="navbar-brand">
+                        <a href="index.html">
+                            <h1>Food, LLC</h1>
+                        </a>
+                    </div>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#collapsable-nav" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+            </div>
+            <div id="collapsable-nav" class="collapse navbar-collapse">
+                <ul id="nav-list" class="nav navbar-nav">
+                    <li>
+                        <a href="#"><br class="hidden-xs">Chicken</a>
+                    </li>
+                    <li>
+                        <a href="#"><br class="hidden-xs">Beef</a>
+                    </li>
+                    <li>
+                        <a href="#"><br class="hidden-xs">Sushi</a>
+                    </li>
+                </ul><!-- #nav-list -->
+            </div><!-- .collapse .navbar-collapse -->
+
+        </nav>
+
+    </header>
+
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+
+    <h1>Our Menu</h1>
+    <div class="container",id="box">
+        <p id="p1">Chieken</p>
+        <div id="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, aspernatur! Earum ducimus in
+            ratione maxime suscipit corporis quaerat voluptatum minus beatae reiciendis atque, quos laboriosam numquam
+            repellat odit fugit consectetur?</div>
+
+    </div>
+
+
+</body>
+
 </html>
