--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -13,26 +13,24 @@
 <body>
     <header>
         <nav id="header-nav" class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <div class="navbar-brand">
-                        <a href="index.html">
-                            <h1>Food, LLC</h1>
-                        </a>
-                    </div>
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#collapsable-nav" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+            <div class="navbar-header">
+                <div class="navbar-brand">
+                    <a href="index.html">
+                        <h1>Food, LLC</h1>
+                    </a>
                 </div>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#collapsable-nav" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar "></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
             </div>
             <div id="collapsable-nav" class="collapse navbar-collapse">
-                <ul id="nav-list" class="nav navbar-nav">
+                <ul id="nav-list" class="nav navbar-nav visible-xs">
                     <li>
-                        <a href="#"><br class="hidden-xs">Chicken</a>
+                        <a href="p1"><br class="hidden-xs">Chicken</a>
                     </li>
                     <li>
                         <a href="#"><br class="hidden-xs">Beef</a>
@@ -53,13 +51,15 @@
     <script src="js/script.js"></script>
 
     <h1>Our Menu</h1>
-    <div class="container",id="box">
-        <p id="p1">Chieken</p>
-        <div id="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, aspernatur! Earum ducimus in
-            ratione maxime suscipit corporis quaerat voluptatum minus beatae reiciendis atque, quos laboriosam numquam
-            repellat odit fugit consectetur?</div>
-
-    </div>
+    <div id="main-content" class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <div class="text-center">
+                    <span id="p1">Chieken</span>
+                    <div id="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, aspernatur! Earum ducimus in ratione maxime suscipit corporis quaerat voluptatum minus beatae reiciendis atque, quos laboriosam numquam repellat odit fugit consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed inventore autem, veniam cumque ea repellat reiciendis alias non repudiandae ipsam. Architecto, quasi harum. Dolores repellat maiores, culpa impedit minus eligendi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, nobis. Aperiam beatae repellat ut repellendus ea nostrum modi veritatis consequatur, obcaecati, sed porro earum reprehenderit quidem ratione ducimus placeat laboriosam?</div>
+                </div>
+            </div>
+        </div>
 
 
 </body>
