--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -55,7 +55,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="text-center">
-                    <span id="p1">Chieken</span>
+                    <span id="p1" class="text-center">Chieken</span>
                     <div id="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, aspernatur! Earum ducimus in ratione maxime suscipit corporis quaerat voluptatum minus beatae reiciendis atque, quos laboriosam numquam repellat odit fugit consectetur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed inventore autem, veniam cumque ea repellat reiciendis alias non repudiandae ipsam. Architecto, quasi harum. Dolores repellat maiores, culpa impedit minus eligendi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, nobis. Aperiam beatae repellat ut repellendus ea nostrum modi veritatis consequatur, obcaecati, sed porro earum reprehenderit quidem ratione ducimus placeat laboriosam?</div>
                 </div>
             </div>
